k8s/domains/accounts/workloads/api/infra/overlays/local/public-docs-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: api-public-docs
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: >-
        Host(`api.tma.com`) &&
        PathPrefix(`/v1/accounts/docs`)
      services:
        - name: api
          port: 3000
